fix gap

--- a/src/BlazorUI/Bit.BlazorUI/Components/Inputs/Toggle/BitToggle.scss
+++ b/src/BlazorUI/Bit.BlazorUI/Components/Inputs/Toggle/BitToggle.scss
@@ -78,8 +78,11 @@
 }
 
 .bit-tgl-fwi {
-    gap: 0;
     width: 100%;
+
+    &.bit-tgl-inl {
+        gap: 0;
+    }
 
     label {
         flex-grow: 1;
